Added link to financial network

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
+										<a href = "https://bvidrascu.github.io/financial" span class="icon solid major style1 fa-code"></span></a>
 										<h3>Financial Network</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
