--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									<li>
 										<a href = "https://bvidrascu.github.io/financial" span class="icon solid major style1 fa-code"></span></a>
 										<h3>Financial Network</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>This network contains only financial ties within the larger NetMap.</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
