--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
 								</header>
 								<ul class="features">
 									<li>
-										<a href = "https://bvidrascu.github.io/financial" span class="icon solid major style1 fa-code"></span></a>
+										<a href = "https://bvidrascu.github.io/financial" span class="icon solid major style1 fa-gem"></span></a>
 										<h3>Financial Network</h3>
 										<p>This network contains only financial ties within the larger NetMap.</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+										<span class="icon major style3 fa-folder-open"></span>
 										<h3>Authority Network</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
+										<span class="icon major style5 fa-code-branch"></span>
 										<h3>Communication network</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
