--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 										<p>This network contains only financial ties within the larger NetMap.</p>
 									</li>
 									<li>
-										<span class="icon major style1 fa-folder-open"></span>
+										<a href = "https://google.com" span class="icon major style1 fa-folder-open"></span></a>
 										<h3>Authority Network</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
-										<span class="icon major style2 fa-code-branch"></span>
+										<a href = "https://google.com" span class="icon major fa-code-branch"></span></a>
 										<h3>Communication network</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
