--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
-										<a href = "https://google.com" span class="icon major fa-code-branch"></span></a>
+										<a href = "https://google.com" span class="icon solid major style3 fa-inbox"></span></a>
 										<h3>Communication network</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
