Redone background color and title

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1 align = "left" style="color:rgb(66, 66, 66);">NetMapping</h1>
-
+						<h1 align = "right" style="color:rgb(66, 66, 66);">NetMapping</h1>
+						<p align = "right" style="color:rgb(66, 66, 66);">
+							Subtitlu subtitlu subtitlu subtitlu
+							subtitlu <br> subtitlu subtitlu subtitlu
+						</p>
 					</header>
 
 				<!-- Nav -->
