--- a/index.html
+++ b/index.html
@@ -125,6 +125,20 @@
 
 						<!-- Get Started -->
 							<section id="cta" class="main special">
+								<div class="box alt">
+									<div class="row gtr-uniform">
+										<div class="col-12"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+									</div>
+								</div>
 								<header class="major">
 									<h2>Find out more</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
@@ -139,7 +153,6 @@
 							</section>
 
 					</div>
-
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
