--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
 								<ul class="features">
 									<li>
 										<a href = "https://bvidrascu.github.io/financial" span class="icon solid major style2 fa-gem"></span></a>
-										<h3>Financial Network</h3>
+										<h3 style = "font-weight: bold;">Financial Network</h3>
 										<p>This network contains only financial ties within the larger NetMap.</p>
 									</li>
 									<li>
 										<a href = "https://google.com" span class="icon major style1 fa-folder-open"></span></a>
-										<h3>Authority Network</h3>
+										<h3 style = "font-weight: bold;" >Authority Network</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
 										<a href = "https://google.com" span class="icon solid major style3 fa-inbox"></span></a>
-										<h3>Communication network</h3>
+										<h3 style = "font-weight: bold;">Communication network</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 								</ul>
