--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">Visualizations</a></li>
 							<li><a href="#second">About</a></li>
-							<li><a href="#cta">See more</a></li>
+							<li><a href="#cta">Methodology</a></li>
 						</ul>
 					</nav>
 
@@ -136,7 +136,7 @@
 									</div>
 								</div>
 								<header class="major">
-									<h2>Find out more</h2>
+									<h2>Methodology</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
