Added fade in to the whole site

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+	<style>
+		@keyframes fadeIn {
+			from {
+				opacity: 0;
+			}
+			to {
+				opacity: 1;
+			}
+		}
+	
+		#wrapper {
+			animation: fadeIn 2s ease-out forwards;
+		}
+	</style>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
