Added one photo

--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+			@keyframes fadeIn {
+				from {
+					opacity: 0;
+				}
+				to {
+					opacity: 1;
+				}
+			}
+		
+			#wrapper {
+				animation: fadeIn 2s ease-out forwards;
+			}
+		</style>
 	</head>
-	<style>
-		@keyframes fadeIn {
-			from {
-				opacity: 0;
-			}
-			to {
-				opacity: 1;
-			}
-		}
 	
-		#wrapper {
-			animation: fadeIn 2s ease-out forwards;
-		}
-	</style>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -138,7 +139,7 @@
 								<div class="box alt">
 									<div class="row gtr-uniform">
 										<div class="col-12"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic1.jpeg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
