--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
 								</header>
 								<ul class="features">
 									<li>
-										<a href = "https://bvidrascu.github.io/financial" span class="icon solid major style2 fa-gem"></span></a>
+										<a href = "https://bvidrascu.github.io/financial" span class="icon solid major style2 fa-gem" target="_blank"></span></a>
 										<h3 style = "font-weight: bold;">Financial Network</h3>
 										<p>This network contains only financial ties within the larger NetMap.</p>
 									</li>
 									<li>
-										<a href = "https://google.com" span class="icon major style1 fa-folder-open"></span></a>
+										<a href = "https://google.com" span class="icon major style1 fa-folder-open" target="_blank"></span></a>
 										<h3 style = "font-weight: bold;" >Authority Network</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
-										<a href = "https://google.com" span class="icon solid major style3 fa-inbox"></span></a>
+										<a href = "https://google.com" span class="icon solid major style3 fa-inbox" target="_blank"></span></a>
 										<h3 style = "font-weight: bold;">Communication network</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
