--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 								<div class="box alt">
 									<div class="row gtr-uniform">
 										<div class="col-12"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/pic1.jpeg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/pic1m.jpeg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
