--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>NetMap Visualisation</title>
+		<title>NetMap - Main Page</title>
 		<link rel="icon" href="images/net.ico" type="image/x-icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
