--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<script src="https://kit.fontawesome.com/d73c841627.js" crossorigin="anonymous"></script>
 		<title>NetMap - Main Page</title>
 		<link rel="icon" href="images/net.ico" type="image/x-icon">
 		<meta charset="utf-8" />
@@ -166,12 +167,9 @@
 								<dd><a href="#">exemplu@exemplu.ro</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
+								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>							</ul>
 						</section>
 						<p class="copyright">&copy; <a href = "https://ino-med.ro">InoMed</a> 2024. Design based on a template by <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
