--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
 										<p>This network contains only financial ties within the larger NetMap.</p>
 									</li>
 									<li>
-										<a href = "https://google.com" span class="icon major style1 fa-clipboard" target="_blank"></span></a>
+										<a href = "https://bvidrascu.github.io/authority" span class="icon major style1 fa-clipboard" target="_blank"></span></a>
 										<h3 style = "font-weight: bold;" >Authority Network</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
-										<a href = "https://google.com" span class="icon major style3 fa-comments" target="_blank"></span></a>
+										<a href = "https://bvidrascu.github.io/communication" span class="icon major style3 fa-comments" target="_blank"></span></a>
 										<h3 style = "font-weight: bold;">Communication network</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
