--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1 align = "right" style="color:rgb(66, 66, 66);font-weight: bold">NetMapping</h1>
+						<h1 align = "right" style="color:rgb(66, 66, 66);font-weight: bold">Institutional Collaboration in the European Code Against Cancer
+						</h1>
 						<p align = "right" style="color:rgb(66, 66, 66);">
-							Subtitlu subtitlu subtitlu subtitlu
-							subtitlu <br> subtitlu subtitlu subtitlu
+							A network-driven exercise in mapping all the relevant <br> stakeolders in the implementation of the European Code Against Cancer
 						</p>
 					</header>
 
@@ -35,7 +35,6 @@
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">Visualizations</a></li>
-							<li><a href="#second">About</a></li>
 							<li><a href="#cta">Methodology</a></li>
 						</ul> 
 					</nav>
@@ -48,13 +47,15 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Social Networks are cool</h2>
+											<h2>What is Netmapping?</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>"Net-Map is an interview-based mapping tool that helps people understand, visualize, discuss, and improve situations in which many different actors influence outcomes. By creating Influence Network Maps, individuals and groups can clarify their own view of a situation, foster discussion, and develop a strategic approach to their networking activities. More specifically, Net-Map helps players to determine
+											what actors are involved in a given network,
+											how they are linked,
+											how influential they are, and
+											what their goals are." (Schiffer, 2007)</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="https://netmap.wordpress.com/about/" class="button">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/net2.webp" alt="" /></span>
@@ -70,58 +71,23 @@
 									<li>
 										<a href = "https://bvidrascu.github.io/financial" span class="icon solid major style2 fa-money-bill" target="_blank"></span></a>
 										<h3 style = "font-weight: bold;">Financial Network</h3>
-										<p>This network contains only financial ties within the larger NetMap.</p>
+										<p>This network traces the web of financial interconnections within the NetMap, highlighting the flow of funds and financial dependencies between entities.</p>
 									</li>
 									<li>
 										<a href = "https://bvidrascu.github.io/authority" span class="icon major style1 fa-clipboard" target="_blank"></span></a>
 										<h3 style = "font-weight: bold;" >Authority Network</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>This network delineates the hierarchy of command within the NetMap, illustrating the authoritative structure by showcasing who supervises whom.</p>
 									</li>
 									<li>
 										<a href = "https://bvidrascu.github.io/communication" span class="icon major style3 fa-comments" target="_blank"></span></a>
 										<h3 style = "font-weight: bold;">Communication network</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>This network illustrates the communication pathways within the NetMap, showing how information is exchanged between different stakeholders.</p>
 									</li>
 								</ul>
 								
 							</section>
 
-						<!-- Second Section -->
-							<section id="second" class="main special">
-								<header class="major">
-									<h2>About</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
-										<strong>1923</strong> Etiam
-									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>1923</strong> Magna
-									</li>
-									<li class="style3">
-										<span class="icon solid fa-signal"></span>
-										<strong>1923</strong> Tempus
-									</li>
-									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
-										<strong>1923</strong> Aliquam
-									</li>
-									<li class="style5">
-										<span class="icon fa-gem"></span>
-										<strong>1923</strong> Nullam
-									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
+				
 
 						<!-- Get Started -->
 							<section id="cta" class="main special">
