Done the main page text

--- a/index.html
+++ b/index.html
@@ -101,8 +101,10 @@
 								</div>
 								<header class="major">
 									<h2>Methodology</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>
+										In a structured process conducted over two meetings with experts within the medical field, we developed a comprehensive stakeholder map pertinent to the implementation of the European Code against Cancer. Initially, <b>stakeholders</b> were identified and each represented by a post-it note on a large paper canvas. These entities were systematically categorized according to their <b>operational level</b> (regional, national, and European) and <b>organizational type</b> (NGO, academia, private, or public institutions). To quantify each stakeholder's perceived <b>influence</b>, we employed an innovative method of stacking magnets on the respective post-it notes, with a higher number of magnets indicating greater influence.
+										<br><br>
+										Subsequently, the experts delineated four distinct types of inter-stakeholder relationships: <b>communication, influence, authority, and financial</b> flow, by drawing lines between the post-its. This initial analog mapping was eventually digitized, leading to the creation of a sophisticated <b>visual representation</b> that facilitates the inspection of the complex network of interactions and hierarchies among stakeholders involved in the European Code against Cancer's implementation.</p>
 								</header>
 
 							</section>
@@ -110,13 +112,7 @@
 					</div>
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
-						</section>
+						
 						<section>
 							<h2>Contact</h2>
 							<dl class="alt">
