--- a/index.html
+++ b/index.html
@@ -124,9 +124,8 @@
 								<dd><a href="#">exemplu@exemplu.ro</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>							</ul>
+								<li><a href="https://twitter.com/InoMedRo" class="icon brands fa-twitter alt"><span class="label">Twitter/X</span></a></li>
+								<li><a href="https://www.facebook.com/centrulpentruinovatieinmedicina" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 						</section>
 						<p class="copyright">&copy; <a href = "https://ino-med.ro">InoMed</a> 2024. Design based on a template by <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
