Updated contact info

--- a/index.html
+++ b/index.html
@@ -107,7 +107,20 @@
 					</div>
 				<!-- Footer -->
 					<footer id="footer">
-					
+						<section>
+							<h2>Contact</h2>
+							<dl class="alt">
+								<dt>Center for Innovation in Medicine</dt>
+								<dt>Phone</dt>
+								<dd>(+40) 745 020 878</dd>
+								+40745020878
+								<dt>Email</dt>
+								<dd><a href="#">marius.geanta@me.com</a></dd>
+							</dl>
+							<ul class="icons">
+								<li><a href="https://twitter.com/InoMedRo" class="icon brands fa-twitter alt"><span class="label">Twitter/X</span></a></li>
+								<li><a href="https://www.facebook.com/centrulpentruinovatieinmedicina" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
+						</section>
 						<p class="copyright">&copy; <a href = "https://ino-med.ro">InoMed</a> 2024. Design based on a template by <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
