--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
 					<footer id="footer">
 						<section>
 							<h2>Contact</h2>
+							<p><b>Center for Innovation in Medicine</b></p>
 							<dl class="alt">
-								<dt>Center for Innovation in Medicine</dt>
 								<dt>Phone</dt>
-								<dd>(+40) 745 020 878</dd>
+								<dd>(+40)745 020 878</dd>
 								<dt>Email</dt>
 								<dd><a href="#">marius.geanta@me.com</a></dd>
 							</dl>
