Added new links

--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
 								</header>
 								<ul class="features">
 									<li>
-										<a href = "https://bvidrascu.github.io/financial" span class="icon solid major style2 fa-money-bill" target="_blank"></span></a>
+										<a href = "financial/index.html" span class="icon solid major style2 fa-money-bill" target="_blank"></span></a>
 										<h3 style = "font-weight: bold;">Financial Network</h3>
 										<p>This network traces the web of financial interconnections within the NetMap, highlighting the flow of funds and financial dependencies between entities.</p>
 									</li>
 									<li>
-										<a href = "https://bvidrascu.github.io/authority" span class="icon major style1 fa-clipboard" target="_blank"></span></a>
+										<a href = "authority/index.html" span class="icon major style1 fa-clipboard" target="_blank"></span></a>
 										<h3 style = "font-weight: bold;" >Authority Network</h3>
 										<p>This network delineates the hierarchy of command within the NetMap, illustrating the authoritative structure by showcasing who supervises whom.</p>
 									</li>
 									<li>
-										<a href = "https://bvidrascu.github.io/communication" span class="icon major style3 fa-comments" target="_blank"></span></a>
+										<a href = "communication/index.html" span class="icon major style3 fa-comments" target="_blank"></span></a>
 										<h3 style = "font-weight: bold;">Communication network</h3>
 										<p>This network illustrates the communication pathways within the NetMap, showing how information is exchanged between different stakeholders.</p>
 									</li>
