--- a/financial/index.html
+++ b/financial/index.html
@@ -150,7 +150,7 @@
       </div>
     </form>
     <br><hr>
-    <p style = "color:rgba(255, 250, 250, 0.721); margin : 20px 0px 0px 2px; line-height: 20px;"><i class="fa-solid fa-circle-info"></i>  See also the <a href = "https://bvidrascu.github.io/authority"><i class="fa-regular fa-clipboard"></i> Authority</a> and the <br><a href = "https://bvidrascu.github.io/communication"><i class="fa-regular fa-comments"></i> Communication</a> networks.</p>
+    <p style = "color:rgba(255, 250, 250, 0.721); margin : 20px 0px 0px 2px; line-height: 20px;"><i class="fa-solid fa-circle-info"></i>  See also the <a href = "/authority/index.html"><i class="fa-regular fa-clipboard"></i> Authority</a> and the <br><a href = "/communication/index.html"><i class="fa-regular fa-comments"></i> Communication</a> networks.</p>
 
     </div>
 
