Updated bug on authority network

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										<p>This network traces the web of financial interconnections within the NetMap, highlighting the flow of funds and financial dependencies between entities.</p>
 									</li>
 									<li>
-										<a href = "authority/index.html" span class="icon major style1 fa-clipboard" target="_blank"></span></a>
+										<a href = "Authority/index.html" span class="icon major style1 fa-clipboard" target="_blank"></span></a>
 										<h3 style = "font-weight: bold;" >Authority Network</h3>
 										<p>This network delineates the hierarchy of command within the NetMap, illustrating the authoritative structure by showcasing who supervises whom.</p>
 									</li>
