Changed the name

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1 align = "right" style="color:rgb(66, 66, 66);font-weight: bold">Institutional Collaboration in the European Code Against Cancer
+						<h1 align = "left" style="color:rgb(66, 66, 66);font-weight: bold">HEALNET - Health Engagement and Analysis Link Network
 						</h1>
-						<p align = "right" style="color:rgb(66, 66, 66);">
-							A network-driven exercise in mapping all the relevant <br> stakeolders in the implementation of the European Code Against Cancer
+						<p align = "left" style="color:rgb(66, 66, 66);">
+							A network-driven exercise in mapping all the relevant institutional stakeolders and the <br> relationships between them in the implementation of the European Code Against Cancer
 						</p>
 					</header>
 
