--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<script src="https://kit.fontawesome.com/d73c841627.js" crossorigin="anonymous"></script>
-		<title>NetMap - Main Page</title>
+		<title>HEALNET - Main Page</title>
 		<link rel="icon" href="images/net.ico" type="image/x-icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
