--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<script src="https://kit.fontawesome.com/d73c841627.js" crossorigin="anonymous"></script>
-		<title>HEALNET - Main Page</title>
+		<title>Netmap - Main Page</title>
 		<link rel="icon" href="images/net.ico" type="image/x-icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -23,7 +23,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1 align = "left" style="color:rgb(66, 66, 66);font-weight: bold">HEALNET - Health Engagement and Analysis Link Network
+						<h1 align = "left" style="color:rgb(66, 66, 66);font-weight: bold">Netmapping exercise
 						</h1>
 						<p align = "left" style="color:rgb(66, 66, 66);">
 							A network-driven exercise in mapping all the relevant institutional stakeolders and the <br> relationships between them in the implementation of the European Code Against Cancer
