--- a/communication/index.html
+++ b/communication/index.html
@@ -150,7 +150,7 @@
       </div>
     </form>
     <br><hr>
-    <p style = "color:rgba(255, 250, 250, 0.721); margin : 20px 0px 0px 2px; line-height: 20px;"><i class="fa-solid fa-circle-info"></i>  See also the <a href = "/financial/index.html"><i class="fa-solid fa-money-bill"></i> Financial</a> and the <br><a href = "/authority/index.html"><i class="fa-regular fa-clipboard"></i> Authority</a> networks.</p>
+    <p style = "color:rgba(255, 250, 250, 0.721); margin : 20px 0px 0px 2px; line-height: 20px;"><i class="fa-solid fa-circle-info"></i>  See also the <a href = "/financial/index.html"><i class="fa-solid fa-money-bill"></i> Financial</a> and the <br><a href = "/Authority/index.html"><i class="fa-regular fa-clipboard"></i> Authority</a> networks.</p>
 
     </div>
 
